# d3-schools-utilities

./: .gitignore  LICENSE  MBB_2026_Massey_Teams.csv  README.md  pyproject.toml
d3_schools/: __init__.py  _normalize.py  exceptions.py  models.py  registry.py
d3_schools/data/: aliases.csv  schools.csv
d3_schools/data/massey/mbb/: 2026.csv
d3_schools/data/massey/wbb/: 2024.csv  2025.csv  2026.csv
scripts/: generate_aliases_csv.py  generate_massey_year.py  generate_mbb_massey.py  generate_schools_csv.py  validate_data.py
tests/: conftest.py  test_massey_bridge.py  test_models.py  test_normalization.py  test_registry.py
