[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d3-schools"
version = "0.1.0"
description = "Canonical D3 school identity clearinghouse — one lookup for every name variant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Scott Peterson" },
]
keywords = ["ncaa", "d3", "division-iii", "basketball", "schools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/scottpeterson/d3-schools"

[tool.hatch.build.targets.wheel]
packages = ["d3_schools"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
